syntax="proto3";

package distpost;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto"; 

service DistPostService {
    rpc GetInitialPosts (google.protobuf.Empty) returns (InitialPosts);
    rpc GetSomePartPosts (MoreThanId) returns (InitialPosts);
    rpc CreateNewPost (CreateNewPostData) returns (google.protobuf.Empty);
    rpc UpdatePost (UpdatePostData) returns (PostProto);
    rpc DeletePost (DeletePostData) returns (google.protobuf.Empty);
}


message PostProto {
    int32 id = 1;
    int32 userId = 2;
    string title = 3;
    string imageUrl = 4;
    string content = 5;
    google.protobuf.Timestamp createdAt = 8;
    google.protobuf.Timestamp updatedAt = 9;
}

message InitialPosts {
    repeated PostProto posts = 1;
}

message MoreThanId {
    int32 lastId = 1;
}

message CreateNewPostData {
    int32 userId = 1;
    string title = 2;
    string content = 3;
    string imageUrl = 4;
}


message UpdatePostData {
    optional int32 userId = 2;
    optional string title = 3;
    optional string imageUrl = 4;
    optional string content = 5;
}

message DeletePostData {
    int32 id = 1;
}

